--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,3 +1,6 @@
+# frozen_string_literal: true
+
+# :nodoc:
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
